--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,3 +1,14 @@
-.someClass {
-
+.content {
+    text-align: left;
+    border: 4px solid #c1c1c1;
+    border-radius: 10px;
+    width: 250px;
+    padding: 15px;
 }
+.button {
+    color: red;
+    background: rgb(222, 209, 208);
+    padding: .2em 0.5em;
+    border-radius: 10px;
+}
+
