--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -6,4 +6,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 3px solid greenyellow;
+    border-radius: 10px;
+    width: 300px;
+    padding: 10px;
+    margin: auto;
 }
