--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,12 +1,13 @@
 .superInput {
-
+    border: 3px solid lightgreen;
 }
 
 .errorInput {
     border: 3px solid lime;
-    background: red;
+    background: orange;
 }
 
 .error {
     color: red;
+
 }
