--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -3,11 +3,7 @@
 }
 
 .errorInput {
-    border: 3px solid lime;
+    border: 3px solid black;
     background: orange;
 }
 
-.error {
-    color: red;
-
-}
