--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,14 +1,88 @@
 .content {
-    text-align: left;
-    border: 4px solid #c1c1c1;
+    text-align: center;
+    margin: auto;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    border: 4px solid black;
     border-radius: 10px;
-    width: 250px;
-    padding: 15px;
+    width: 600px;
+    padding: 15px 100px;
 }
-.button {
-    color: red;
-    background: rgb(222, 209, 208);
-    padding: .2em 0.5em;
-    border-radius: 10px;
+
+.buttonFilter {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    margin-right: 20px;
+    text-decoration: none;
+    font-family: 'Comfortaa', cursive;
+    font-size: 20px;
+    line-height: 1;
+    letter-spacing: normal;
+    color: #fdfdfd;
+    text-shadow: -1px -1px #81f155;
+    background: #338fc5;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.buttonFilter:hover {
+    text-shadow: none;
+}
+
+.buttonFilter:after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -3;
+    left: -4px;
+    top: -1px;
+    background: #561302;
+    transform: skewY(2deg);
+    transition: .3s;
+}
+
+.buttonFilter:hover:after {
+    transform: none;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
+.buttonDel {
+    text-decoration: none;
+    color: #7777de;
+    display: inline-block;
+    position: relative;
+    padding: 15px 30px;
+    border: 1px solid;
+    border-radius: 5px;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: .8s cubic-bezier(.165, .84, .44, 1);
+    cursor: pointer;
+}
+.buttonDel:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 0;
+    width: 100%;
+    z-index: -1;
+    background: linear-gradient(200deg, #ff3000, #ed0200,#8a2be2);
+    transition: .8s cubic-bezier(.165, .84, .44, 1);
+}
+.buttonDel:hover {
+    background: rgba(255, 255, 255, 0);
+}
+.buttonDel:hover:before {
+    bottom: 0;
+    top: auto;
+    height: 100%;
 }
 
