--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -1,5 +1,5 @@
 .blue {
-    border-bottom: 5px solid blue;
+    border: 3px solid blue;
 }
 
 .column {
@@ -8,7 +8,7 @@
     align-items: center;
     border: 3px solid greenyellow;
     border-radius: 10px;
-    width: 300px;
+    width: 400px;
     padding: 10px;
     margin: auto;
 }
