--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,9 +1,29 @@
-.default {
-    color: black;
-    padding: 10px;
+.defaultButton {
+    text-decoration: none;
+    display: inline-block;
+    width: 140px;
+    height: 45px;
+    line-height: 45px;
+    border-radius: 45px;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .3s;
+    cursor: pointer;
+}
+.defaultButton:hover {
+    background: #30c3d9;
+    box-shadow: 0 15px 20px rgba(47, 99, 215, 0.5);
+    color: white;
 }
 
 .red {
-    background: red;
-    border: 3px solid blue;
+    border: 1px solid red;
 }
