--- a/src/p2-homeworks/h5/hw5.module.css
+++ b/src/p2-homeworks/h5/hw5.module.css
@@ -1,13 +1,11 @@
 .header {
-    display: flex;
-    align-items: center;
-    background-color: green;
+    background-color: olivedrab;
     color: black;
     padding: 15px;
     cursor: pointer;
-    box-shadow: 0px 3px 5px green;
-    transition-duration: 700ms;
+    box-shadow: 0 3px 5px green;
     transform: translate(-1500px);
+    margin: auto;
 }
 .header:hover {
     transition-duration: 700ms;
@@ -21,6 +19,9 @@
 }
 .links:hover{
     color: blue;
+    background: orangered;
+    border: 2px solid red;
+    border-radius: 15px;
 }
 .active {
     color: #000;
