--- a/src/p2-homeworks/h10/style.module.css
+++ b/src/p2-homeworks/h10/style.module.css
@@ -2,3 +2,28 @@
     text-align: center;
     height: 200px;
 }
+
+.button {
+    text-decoration: none;
+    display: inline-block;
+    width: 200px;
+    line-height: 45px;
+    border-radius: 45px;
+    margin: 10px 20px;
+    font-family: "Comfortaa", cursive;
+    font-size: 13px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 600;
+    color: #524f4e;
+    background: #ecaaaa;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .3s;
+    cursor: pointer;
+}
+.button:hover {
+    background: #e16868;
+    box-shadow: 0 15px 20px rgb(201, 116, 116);
+    color: #3434ea;
+}
