--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -23,7 +23,6 @@
     box-shadow: 0 15px 20px rgba(47, 99, 215, 0.5);
     color: white;
 }
-
 .red {
-    border: 1px solid red;
+    border: 1px solid #f53a0a;
 }
